package tests

import (
	"context"
	"fmt"
	"testing"

	"github.com/brianvoe/gofakeit"
	"github.com/gojuno/minimock/v3"
	"github.com/stretchr/testify/require"

	"github.com/antoneka/auth/internal/handler/grpc/user"
	"github.com/antoneka/auth/internal/model"
	"github.com/antoneka/auth/internal/service"
	serviceMocks "github.com/antoneka/auth/internal/service/mocks"
	desc "github.com/antoneka/auth/pkg/user_v1"
)

func TestCreate(t *testing.T) {
	t.Parallel()

	type userServiceMockFunc func(mc *minimock.Controller) service.UserService

	type args struct {
		ctx context.Context
		req *desc.CreateRequest
	}

	var (
		ctx = context.Background()
		mc  = minimock.NewController(t)

		id       = gofakeit.Int64()
		name     = gofakeit.Name()
		email    = gofakeit.Email()
		password = gofakeit.Password(true, true, true, true, true, 6)
		role     = desc.Role(gofakeit.Int32()%2 + 1)

		serviceErr = fmt.Errorf("service error")

		req = &desc.CreateRequest{
			Name:     name,
			Email:    email,
			Password: password,
			Role:     role,
		}

		userInfo = &model.UserInfo{
			Name:     name,
			Email:    email,
			Password: password,
			Role:     model.Role(desc.Role_name[int32(role)]),
		}

		res = &desc.CreateResponse{
			Id: id,
		}
	)
	// t.Cleanup(mc.Finish)

	tests := []struct {
		name            string
		args            args
		want            *desc.CreateResponse
		err             error
		userServiceMock userServiceMockFunc
	}{
		{
			name: "success case",
			args: args{
				ctx: ctx,
				req: req,
			},
			want: res,
			err:  nil,
			userServiceMock: func(mc *minimock.Controller) service.UserService {
				mock := serviceMocks.NewUserServiceMock(mc)
				mock.CreateMock.Expect(ctx, userInfo).Return(id, nil)
				return mock
			},
		},
		{
			name: "service error case",
			args: args{
				ctx: ctx,
				req: req,
			},
			want: nil,
			err:  serviceErr,
			userServiceMock: func(mc *minimock.Controller) service.UserService {
				mock := serviceMocks.NewUserServiceMock(mc)
				mock.CreateMock.Expect(ctx, userInfo).Return(0, serviceErr)
				return mock
			},
		},
	}

	for _, tt := range tests {
		tt := tt
		t.Run(tt.name, func(t *testing.T) {
			t.Parallel()

			userServiceMock := tt.userServiceMock(mc)
			api := user.NewImplementation(userServiceMock)

			resResponse, err := api.Create(tt.args.ctx, tt.args.req)
			require.ErrorIs(t, err, tt.err)
			require.Equal(t, tt.want, resResponse)
		})
	}
}
